# rest_tensors

./: Cargo.toml  README.md  build.rs  docs.sh
benches/: bench_tensors.rs
doc/: crates.js
doc/anyhow/: struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
doc/blas/: fn.caxpy.html  fn.cdotc.html  fn.cgemm.html  fn.cgemv.html  fn.cgeru.html  fn.chemm.html  fn.chemv.html  fn.cher.html  fn.cher2k.html  fn.cherk.html  fn.chpmv.html  fn.chpr.html  fn.csymm.html  fn.ctbmv.html  fn.ctbsv.html  fn.ctpsv.html  fn.ctrsm.html  fn.ctrsv.html  fn.dasum.html  fn.ddot.html  fn.dgbmv.html  fn.dgemv.html  fn.dnrm2.html  fn.drotmg.html  fn.dsbmv.html  fn.dscal.html  fn.dspr2.html  fn.dsymm.html  fn.dsyr2k.html  fn.dtpmv.html  fn.dtpsv.html  fn.dtrmm.html  fn.dtrmv.html  fn.dznrm2.html  fn.idamax.html  fn.isamax.html  fn.sasum.html  fn.scnrm2.html  fn.scopy.html  fn.sdot.html  (+33 more)
doc/blas_sys/: fn.caxpy_.html  fn.ccopy_.html  fn.cdotu_.html  fn.cgeru_.html  fn.chbmv_.html  fn.cher2_.html  fn.cher_.html  fn.cherk_.html  fn.chpmv_.html  fn.chpr2_.html  fn.chpr_.html  fn.crotg_.html  fn.cswap_.html  fn.csymm_.html  fn.csyr2k_.html  fn.ctrmm_.html  fn.ctrmv_.html  fn.ctrsm_.html  fn.ctrsv_.html  fn.dasum_.html  fn.dcopy_.html  fn.dger_.html  fn.drotm_.html  fn.dsbmv_.html  fn.dspmv_.html  fn.dspr_.html  fn.dswap_.html  fn.dsyr2_.html  fn.dsyrk_.html  fn.dtpmv_.html  fn.dtrmm_.html  fn.dtrmv_.html  fn.dtrsm_.html  fn.dznrm2_.html  fn.icamax_.html  fn.idamax_.html  fn.sasum_.html  fn.scnrm2_.html  fn.scopy_.html  fn.sdot_.html  (+36 more)
doc/bytemuck/: fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.pod_align_to.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_slice_mut.html  trait.PodInOption.html  trait.ZeroableInOption.html
doc/crossbeam_channel/: fn.tick.html  fn.unbounded.html  index.html  struct.IntoIter.html
doc/crossbeam_deque/: index.html  struct.Stealer.html
doc/either/: index.html
doc/lapack/: all.html  fn.cgbbrd.html  fn.cgbcon.html  fn.cgbequ.html  fn.cgbequb.html  fn.cgbtrf.html  (+617 more)
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
external_libs/: restmatr.f90
src/: davidson.rs  eri.rs  index.rs  lib.rs  matrix.rs  matrix_blas_lapack.rs  ri.rs  tensor_basic_operation.rs  tensors.rs
(+10632 files in other folders)
