[package]
name = "fdqc-tensors"
version = "0.1.0"
edition = "2018"

[lib]
bench = true
crate-type = ["dylib", "rlib"]
#crate-type = ["lib"]

build = "build.rs"
[build_dependencies]
dunce = "1.0.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_tensors"
#path = "../fdqc-tensors/benches/bench_tensors.rs"
harness = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapack-sys = "0.14"
lapack = "0.19"
blas-sys = "0.7"
blas = "0.22"
num-complex = "0.4"
libc = "0.2"
typenum = "1.14"
rayon = "1.5.1"
itertools = "0.10.3"
anyhow = "1"
#blas-src = { version = "0.8", features=["openblas"] }
#lapack-src = { version = "0.8", features=["openblas"] }
#openblas-src = {version = "0.10", features=["static"]}
#eigenvalues = "0.4.0"
nalgebra = "0.31.1"

